<resources>
    <string name="app_name">IMT3673 Project</string>
    <string name="error_authentication">Failed to authenticate with Google Play Games Services.</string>
    <string name="error_no_accel">This device does not have an accelerometer.</string>
    <string name="error_no_vibrator">This device does not have a vibrator.</string>
    <string name="gp_show_leaderboard_fail">Failed to get the leaderboard from Google Play.</string>
    <string name="gp_submit_score_fail">Failed to submit the score to Google Play.</string>
    <string name="gp_submit_score_success">The score was successfully submitted to Google Play.</string>
    <string name="menu_play_button">PLAY</string>
    <string name="menu_options_button">OPTIONS</string>
    <string name="menu_signIn_button">SIGN IN (GOOGLE PLAY)</string>
    <string name="menu_signOut_button">SIGN OUT (GOOGLE PLAY)</string>
    <string name="menu_gp_leaderboard_button">ONLINE LEADERBOARD</string>
    <string name="menu_exit_button">EXIT</string>
    <string name="option_menu_volume_label">Volume</string>
    <string name="option_menu_vibrate_box">Vibrate</string>
    <string name="option_menu_gp_score_box">Upload score to Google Play?</string>
    <string name="option_menu_save_button">SAVE</string>
    <string name="content_description_background">Metal background for startup menu and option menu</string>
    <string name="level_chooser_title">Choose Level</string>
    <string name="level_start_button">Start</string>
    <string name="level_gold">Gold</string>
    <string name="level_silver">Silver</string>
    <string name="level_bronsze">Bronze</string>
    <string name="level_best_time">Best Time</string>
    <string name="gold_star">gold star</string>
    <string name="silver_star">silver star</string>
    <string name="bronze_star">bronze star</string>
    <string name="big_star">big star</string>
    <string name="choose_level">choose level</string>
    <string name="win_gold_star">win gold star</string>
    <string name="win_silver_star">win silver star</string>
    <string name="win_bronze_star">win bronze star</string>
    <string name="times_to_beat">Times to beat</string>

</resources>
