<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal_background_menu_image"
    tools:context="com.imt3673.project.menu.StartupMenu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="372dp"
        android:layout_height="127dp"
        android:contentDescription="@string/content_description_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gravity_ball_menu_image"
    />

    <Button
        android:id="@+id/StartupMenu_play_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/menu_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
    />

    <Button
        android:id="@+id/StartupMenu_option_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/menu_options_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartupMenu_play_btn"
    />

    <Button
        android:id="@+id/StartupMenu_googlePlay_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartupMenu_option_btn"
    />

    <Button
        android:id="@+id/StartupMenu_googlePlayLeaderboard_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/menu_gp_leaderboard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartupMenu_googlePlay_btn"
    />

    <Button
        android:id="@+id/StartupMenu_exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartupMenu_googlePlayLeaderboard_btn"
        app:layout_constraintBottom_toBottomOf="parent"
    />
</android.support.constraint.ConstraintLayout>
