<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal_background_menu_image"
    tools:context="com.imt3673.project.menu.OptionsMenu">

    <TextView
        android:id="@+id/OptionsMenu_volume_label"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:text="@string/option_menu_volume_label"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/OptionMenu_volume_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <SeekBar
        android:id="@+id/OptionMenu_volume_control"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:progressTint="@android:color/background_light"
        android:secondaryProgressTint="@android:color/darker_gray"
        android:thumbTint="?android:attr/colorBackground"
        app:layout_constraintTop_toBottomOf="@+id/OptionsMenu_volume_label"
        app:layout_constraintBottom_toTopOf="@+id/OptionsMenu_vibration_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <CheckBox
        android:id="@+id/OptionsMenu_vibration_box"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/option_menu_vibrate_box"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/OptionMenu_volume_control"
        app:layout_constraintBottom_toTopOf="@+id/OptionsMenu_gpScore_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <CheckBox
        android:id="@+id/OptionsMenu_gpScore_box"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/option_menu_gp_score_box"
        android:textColorLink="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/OptionsMenu_vibration_box"
        app:layout_constraintBottom_toTopOf="@+id/OptionMenu_save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/OptionMenu_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_menu_save_button"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/OptionsMenu_gpScore_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />
</android.support.constraint.ConstraintLayout>
